--- a/cv.html
+++ b/cv.html
@@ -10,7 +10,7 @@
 	<p> Cuistot pour toujours, Networkeuse depuis ma dernière mise à jour...</p>
 
 <figure>
-	<img src="ITWORKS/moi/mini_WP_20170502_008.jpg">
+	<img src=https://github.com/fannyhenno/mon-cv/blob/master/mini_WP_20170502_008.jpg>
 </figure>	
 
 		<h2>Mon expérience</h2>
